syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "algogrit.com/fib-grpc/api";

package api;

service Fibonacci {
  rpc GetNext(google.protobuf.Empty) returns (FibonacciNumber) {} // Unary
  rpc GetFirstN(FirstNQuery) returns (FirstNResponse) {} // Unary
  rpc Stream(google.protobuf.Empty) returns (stream FibonacciNumber) {} // Server-side Streaming
}

message FirstNQuery {
  int64 n = 1;
}

message FibonacciNumber {
  int64 value = 1;
}

message FirstNResponse {
  repeated FibonacciNumber values = 1;
}
